Fix badge truncation when a `<button>`

--- a/src/components/badge/_badge.scss
+++ b/src/components/badge/_badge.scss
@@ -16,6 +16,7 @@
   vertical-align: middle;
   text-align: center;
   overflow: hidden;
+  max-width: 100%;
 
   &:focus-within {
     @include euiFocusRing('small');
